corrected footer resposiveness on mobile

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,5 +1,5 @@
 .footer {
-  /* width: 100%; */
+  margin-top: 5%;
   padding: 40px;
   display: flex;
   justify-content: space-between;
@@ -83,7 +83,7 @@
   text-align: left;
   justify-content: left;
   align-items: flex-start;
-  max-width: 25%;
+  max-width: 30%;
 }
 
 .footer__link__content > h5 {
@@ -93,7 +93,7 @@
 
 .footer__link__content > div {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   margin: 5px 0px;
 }
 
@@ -104,6 +104,7 @@
   margin-bottom: 0px;
   color: #5889ae;
   margin-right: 10px;
+  margin-left: 0px;
 }
 
 .footer__link__content > div > h6,
@@ -128,36 +129,36 @@ a {
   padding: 10px;
   letter-spacing: 0.1rem;
 }
-
+/* media query from tablets to medium screens */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .footer {
     padding: 20px;
   }
-
+  
   .footer__news {
     width: 42%;
   }
-
+  
   .footer__news {
     margin: 0px;
   }
   .footer__news > h4 {
     font-size: 1.2rem;
   }
-
+  
   .footer__news > p {
     font-size: 13px;
   }
-
+  
   .footer__newsletter {
     width: auto;
   }
-
+  
   .footer__btn,
   .footer__newsletter > input[type="email"] {
     height: 40px;
   }
-
+  
   .footer__links {
     width: auto;
     flex-wrap: wrap;
@@ -167,11 +168,11 @@ a {
     font-size: 1.2rem;
     margin-bottom: 10px;
   }
-
+  
   .footer__link__content > div {
     width: 100%;
   }
-
+  
   .footer__link__content > div > h6,
   a {
     font-size: 12px;
@@ -194,27 +195,42 @@ a {
     text-align: center;
     width: 100%;
   }
-
+  
   .footer__news {
     width: auto;
     margin-bottom: 1.5rem;
     display: grid;
     place-items: center;
   }
-
+  
   .footer__newsletter {
     width: auto;
   }
-
-  .footer__links {
-    display: block;
-    margin: 20px 0px;
-    background-color: bisque;
-    width: 100%;
-  }
-
+  
   .footer .footer__news > h4 {
     font-size: 1.2rem;
     text-transform: uppercase;
   }
+  
+  .footer__links {
+    display: block;
+    width: auto;
+  }
+  .footer__link__content{
+    display: block;
+    max-width: 250px;
+    margin: 25px 0px;
+  }
+  
+  .footer__link__content > div {
+  display: flex;
+  align-items: flex-start;
+  max-width: auto;
+  }
+
+  .footer__link__content > div> svg {
+    margin-right: 10px;
+  }
+  
+
 }
