--- a/src/components/Sections/Sections.css
+++ b/src/components/Sections/Sections.css
@@ -1,5 +1,5 @@
 .sections{
-  width: 80%;
+  /* width: 80%; */
   display: grid;
   justify-content: center;
 }
